Code cleanup:  - Created ODataConstants.Charsets, replaced where necessary in codebase (except repack)